# champ

./: .deepsource.toml  .dockerignore  .gitignore  .rustfmt.toml  CHANGELOG.md  Cargo.toml  Makefile.toml  README.md  RELEASE_NOTES.md  SECURITY.md  cliff.toml  db  justfile  mkdocs.yml  release.toml  requirements.txt  snap.00000000000001BE
.cargo/: audit.toml
.cargo-husky/hooks/: pre-commit
.github/: auto_assign.yml
.github/workflows/: audit.yaml  build-binaries.yaml  canary-docker.yaml  canary-wasm.yaml  canary.yaml  check.yaml  ci.yaml  e2e-test.yaml  release-binaries.yaml  release-notes.yaml  release.yaml  update-docs.yaml
champ/dev/: cargo.toml
champ/lib/champ-wasm/: Cargo.toml  README.md  adad.rs  lib.rs  util.rs  wallet.rs  zbase.rs
champ/lib/consensus/: Cargo.toml
champ/lib/crypto/: Cargo.toml  aead.rs  curves.rs  hash.rs  id.rs  lib.rs  password.rs  zbase32.rs
champ/lib/crypto/aead/: chacha.rs
champ/lib/crypto/curves/: curve25519.rs  ecdsa.rs
champ/lib/crypto/signatures/: ecdsa.rs  ed25519.rs  mod.rs
champ/lib/db/: Cargo.toml
champ/lib/encoding/: Cargo.toml  account.rs  adad.rs  lib.rs  zbase32.rs
champ/lib/jwt/: Cargo.toml  lib.rs
champ/lib/log/: Cargo.toml
champ/lib/lulw/: Cargo.toml  lib.rs
champ/lib/lulw-wasm/: Cargo.toml  README.md  lib.rs
champ/lib/lulw/versions/: v0.rs
champ/lib/p2p/: Cargo.toml  connection.rs  lib.rs  main.rs
champ/lib/pog-wasm/: Cargo.toml  README.md
champ/lib/pwned/: Cargo.toml  lib.rs
champ/lib/roughtime/: Cargo.toml  client.rs  server.rs
champ/lib/rpc/: Cargo.toml
champ/lib/storage/: Cargo.toml  README.md  lib.rs
champ/lib/storage/mock/: mock.rs  mod.rs
champ/lib/storage/rocksdb/: mod.rs  rocksdb.rs
champ/lib/storage/scylla/: mod.rs  scylla.rs
champ/lib/storage/sled/: sled.rs
champ/lib/wapi/: Cargo.toml  README.md
champ/lib/wasm/: Cargo.toml  README.md  lib.rs
champ/node/: Cargo.toml  cli.rs  config.rs  consensus.rs  env.rs  interceptors.rs  lib.rs  main.rs  metrics.rs  rpc.rs  state.rs
champ/node/auth/: interceptors.rs  mod.rs  permissions.rs
champ/node/blockpool/: client.rs  mod.rs  pool.rs  server.rs  shared.rs
champ/node/cli/: create_user.rs  error.rs  mod.rs  parser.rs
champ/node/cli/admin/: admin.rs  commands.rs  create_user.rs  mod.rs
champ/node/cli/wallet/: commands.rs
champ/node/consensus/: consensus.md  graphs.rs  importance_farming.md  mod.rs  voting.rs  voting_power.rs
champ/node/consensus/snapshots/: champ_node__consensus__graphs__tests__snapshots-2.snap  champ_node__consensus__graphs__tests__snapshots-3.snap  champ_node__consensus__graphs__tests__snapshots-4.snap  champ_node__consensus__graphs__tests__snapshots.snap
champ/node/http/: server.rs
champ/node/p2p/: metrics.rs  mod.rs  pogprotocol.rs  protocol.rs  server.rs  types.rs
champ/node/p2p/methods/: forward.rs  mod.rs  ping.rs  vote.rs
champ/node/rpc/: account.rs  admin.rs  block.rs  greeter.rs  lattice.rs  mod.rs  node_admin.rs  node_user.rs  node_wallet_manager.rs  private.rs  server.rs
champ/node/storage/: database.rs  mod.rs
champ/node/storage/mock/: mock.rs
champ/node/storage/rocksdb/: rocksdb.rs
champ/node/storage/scylla/: mod.rs  scylla.rs
champ/node/storage/sled/: main.rs  mod.rs  sled.rs
champ/node/storage/sql/: main.rs  mod.rs
champ/node/storage/sql/entities/: Cargo.toml
champ/node/storage/sql/entity/: Cargo.toml  entities.rs  lib.rs
champ/node/storage/sql/entity/entities/: account.rs  block.rs  pending_block.rs  transaction.rs  tx_claim.rs
champ/node/storage/sql/migration/: Cargo.toml  lib.rs
champ/node/storage/sql/migration/migrations/: m20220101_000001_create_table.rs
champ/node/tests/: storage_test.rs
champ/node/tests/common/: storage.rs
champ/node/validation/: block.rs
champ/node/wallets/: manager.rs  mod.rs  wallets.rs
champ/wallet/: Cargo.toml  main.rs
docs/: cicd.md  event-loop.md  index.md  overview.md  rpc-api.md  security.md  storage-layer.md  voting.md
docs/developers/: cicd.md  dockerz.md  introduction.md  overview.md  rpc-api.md  security.md  setup.md  voting.md
docs/developers/consensus/: consensus.md  importance_farming.md
docs/developers/storage/: sql.md
docs/operators/: installation.md  security.md
proto/: Cargo.toml  api.proto  rpc.proto
proto/src/: .gitignore  build.rs  lib.rs
scripts/: Dockerfile  scylla.docker-compose.yml
scripts/js/: bump-champ-wasm.js  package-lock.json  package.json  pnpm-lock.yaml
