[package]
authors = ["The POG Contributors <contact@pog.network>"]
build = "src/build.rs"
edition = "2018"
name = "champ-proto"
version = "0.1.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.8"
tonic = "0.5"

[build-dependencies]
tonic-build = "0.5"

[lib]
