[package]
authors = ["The POG Contributors <contact@pog.network>"]
edition = "2021"
name = "champ-node"

publish = false
version = "0.0.9"

[dependencies]
crypto = {path = "../lib/crypto"}
encoding = {path = "../lib/encoding"}
pog-jwt = {path = "../lib/jwt"}
pwned = {path = "../lib/pwned"}
roughtime = {path = "../lib/roughtime"}

anyhow = "1.0"
async-trait = "0.1"
clap = "3.0.7"
lazy_static = "1.4"
pog-proto = {git = "https://github.com/pognetwork/proto"}
prometheus = {version = "0.13", features = ["process"]}
serde = "1"
thiserror = "1.0"
tokio = {version = "1.0", features = ["macros", "rt-multi-thread"]}
toml = "0.5"
tracing = "0.1"
tracing-subscriber = "0.3"
libp2p = { version = "0.43", features= ["tcp-tokio"]}
once_cell = "1.5"

# /CONFIG
directories = "4.0"
path-absolutize = "3.0"

# /RPC
hyper = "0.14"
prost = "0.9"
tonic = {version = "0.6", features = ["transport", "prost"]}
tonic-web = "0.2"
tower = "0.4"

# /STORAGE
entity = {path = "./storage/sql/entity", optional = true}
sled = {version = "0.34", optional = true}

[dev-dependencies]
insta = "1.8.0"

[dev-dependencies.cargo-husky]
features = ["user-hooks"]
version = "1"

[[bin]]
name = "champ-node"
path = "main.rs"

[lib]
path = "lib.rs"

[features]
backend-sled = ["sled"]

backend-mysql = ["sql", "entity", "entity/mysql"]
backend-postgres = ["sql", "entity", "entity/postgres"]
backend-sqlite = ["sql", "entity", "entity/sqlite"]
sql = []

default = ["backend-sled", "backend-sqlite"]
