[package]
authors = ["The POG Contributors <contact@pog.network>"]
default-run = "champ-wallet"
edition = "2018"
name = "wallet"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"

[[bin]]
name = "champ-wallet"
path = "main.rs"
