[package]
authors = ["The POG Contributors <contact@pog.network>"]
edition = "2021"
license = "AGPL-3.0"
name = "champ-wasm"
publish = false
version = "0.0.8"

[dependencies]
base64 = "0.13"
instant = "0.1"
lulw = {path = "../lulw"}
parking_lot_core = "0.8.0"
wasm-bindgen = "0.2.78"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[lib]
crate-type = ["cdylib"]
path = "lib.rs"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O4']

[package.metadata.wasm-pack.profile.release.wasm-bindgen]
debug-js-glue = false
demangle-name-section = true
dwarf-debug-info = false
