[package]
authors = ["The POG Contributors <contact@pog.network>"]
edition = "2021"
name = "crypto"
publish = false
version = "0.0.8"

[dependencies]
anyhow = "1.0"
argon2 = "0.3"
base64 = "0.13"
chacha20poly1305 = "0.9"
ed25519-zebra = "3"
pem = "0.8"
rand = "0.8"
ring = "0.16"
sha3 = "0.9"
thiserror = "1.0"

[lib]
path = "lib.rs"
