[package]
authors = ["The POG Contributors <contact@pog.network>"]
edition = "2021"
name = "crypto"
publish = false
version = "0.0.9"

[dependencies]
anyhow = "1.0"
argon2 = "0.3"
base64 = "0.13"
chacha20poly1305 = "0.9"
ed25519-zebra = "3"
getrandom = {version = "0.2", features = ["js"]}
p256 = {version = "0.10", features = ["ecdsa", "pem", "sha256"]}
pkcs8 = {version = "0.8", features = ["pem", "alloc"]}
rand = "0.8"
sha-1 = "0.10"
sha3 = "0.10"
thiserror = "1.0"

[lib]
path = "lib.rs"
