[package]
authors = ["The POG Contributors <contact@pog.network>"]
edition = "2021"
name = "encoding"

publish = false
version = "0.0.9"

[dependencies]
bytes = "1"
crypto = {path = "../crypto", version = "^0.0.9"}
futures = "0.3"
sha3 = "0.10"
thiserror = "1.0"
tokio = {version = "1", features = ["test-util"]}
unsigned-varint = {version = "0.7", features = ["codec"]}

[lib]
path = "lib.rs"
