[package]
authors = ["The POG Contributors <contact@pog.network>"]
edition = "2018"
name = "lulw"

publish = false
version = "0.0.6"

[dependencies]
base64 = "0.13"
crypto = {path = "../crypto"}
encoding = {path = "../encoding"}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
thiserror = "1.0"

[lib]
path = "lib.rs"
