[package]
authors = ["The POG Contributors <contact@pog.network>"]
edition = "2021"
name = "p2p"

publish = false
version = "0.0.9"

[dependencies]
libp2p = "0.39"
tokio = {version = "1.0", features = ["macros", "rt-multi-thread","net"]}
tokio-util = {version = "0.6.0", features = ["codec"]}
tokio-stream = "0.1.7"
bytes = "1"
serial_test = "0.5.1"

[lib]
path = "lib.rs"
