[package]
authors = ["The POG Contributors <contact@pog.network>"]
edition = "2021"
name = "p2p"

publish = false
version = "0.0.9"

[dependencies]
bytes = "1"
libp2p = "0.39"
serial_test = "0.5.1"
tokio = {version = "1.0", features = ["macros", "rt-multi-thread", "net"]}
tokio-stream = "0.1.7"
tokio-util = {version = "0.6.0", features = ["codec"]}

[lib]
path = "lib.rs"
