[package]
authors = ["The POG Contributors <contact@pog.network>"]
edition = "2021"
name = "pwned"
publish = false
version = "0.0.9"

[dependencies]
crypto = {path = "../crypto"}
hex = "0.4"
reqwest = {version = "0.11", features = ["rustls-tls"], default-features = false}
thiserror = "1.0"
tokio = {version = "1", features = ["macros", "rt-multi-thread"]}

[lib]
path = "lib.rs"
