[package]
authors = ["The POG Contributors <contact@pog.network>"]
edition = "2021"
name = "roughtime"

publish = false
version = "0.0.9"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
hex = "0.4"
roughenough = {git = "https://github.com/pognetwork/roughenough"}
thiserror = "1.0"
tracing = "0.1"

[lib]
path = "lib.rs"
