[package]
authors = ["The POG Contributors <contact@pog.network>"]
edition = "2018"
name = "storage"
version = "0.1.0"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
crypto = {path = "../../lib/crypto"}
hex = "0.4"
pog-proto = {git = "https://github.com/pognetwork/proto"}
rocksdb = {version = "0.16", optional = true}
scylla = {version = "0.2", optional = true}
thiserror = "1.0"

[lib]
path = "lib.rs"

[features]
backend-rocksdb = ["rocksdb"]
backend-scylla = ["scylla"]
default = ["backend-scylla"]
