[package]
edition = "2021"
name = "entity"
publish = false
version = "0.1.0"

[lib]
path = "lib.rs"

[dependencies]
chrono = "0.4"
sea-orm = {version = "0.6", features = ["runtime-tokio-rustls", "macros"], default-features = false}

[features]
default = ["sqlite"]
mysql = ["sea-orm/sqlx-mysql"]
postgres = ["sea-orm/sqlx-postgres"]
sqlite = ["sea-orm/sqlx-sqlite"]
